ADD: Serializers para o usuário com encriptação de senha

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# migrations
+**/migrations/
+**/migrations/*.pyc
+**/migrations/__pycache__/
+
 # C extensions
 *.so
 
